# practicing_rust

catr/: Cargo.toml
catr/src/: lib.rs  main.rs
catr/tests/: cli.rs
echo/: Cargo.toml
echo/src/: main.rs
echo/tests/: cli.rs
echor/src/: main.rs
headr/: Cargo.toml
headr/src/: lib.rs  main.rs
