[package]
name = "catr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = "2.33"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
pretty_assertions = "1.4.0"
rand = "0.8.5"